figuring out counter for # of searches

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -11,27 +11,21 @@
       "service_worker": "background.js" 
     },
     "action": {
-      "default_popup": "popup.html", 
+      "default_popup": "popup/popup.html", 
       "default_icon": {
-        "16": "icons/icon16.png", 
-        "48": "icons/icon48.png",
-        "128": "icons/icon128.png"
+        "16": "icons/icon16.png" 
       }
     },
     "content_scripts": [
       {
         "matches": ["<all_urls>"], 
-        "js": ["content.js"], 
-        "css": ["styles.css"]
+        "js": ["content_scripts/content.js"]
       }
     ],
     "host_permissions": [
       "http://*/*", "https://*/*" 
     ],
     "icons": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
-    },
-    "options_page": "options.html" 
+      "16": "icons/icon16.png"
+    }
   }
